# BlueRetroS31

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  partitions_s2.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s31
components/queue_bss/: queue_bss.c
configs/: none  xbox
configs/hw1/: gp01
configs/usb/: xbox
keys/: secure_boot_signing_key.pem  xbox.pem
main/: CMakeLists.txt  Kconfig.projbuild  linker.lf  main.c
main/adapter/: adapter.c  adapter.h  config.c  config.h  kb_monitor.c  macro.c  macro.h  memory_card.c
main/adapter/wired/: dc.c  gc.c  genesis.c  gp01.c  gp01.h  jag.c  npiso.c  pce.c  real.c  saturn.c  wavepak_vx.c  wavepak_vx.h  wired.c  wired.h  xbox.c  xbox.h
main/adapter/wireless/: hid_generic.c  ps.c  ps3.c  sw.c  wii.c
main/bluetooth/: att_cfg.c  hci.c  hci_uart.c  hci_uart.h  host.c
main/bluetooth/hidp/: ps.c  sw.c
main/interface/: interface.c  interface.h  interface_common.c  interface_common.h  parallel.c  wavepak_vx.c  wavepak_vx.h  xbox_usb.c  xbox_usb.h
main/system/: bare_metal_app_cpu.c  clk_gate_ll.h  core0_stall_highint_hdl.S  fpga_config.c  gpio.c  gpio.h  led.c  manager.c  manager.h  startup.c
main/tools/: util.h
main/wired/: nsi.c  pce_io.c  pcfx_spi.c  ps_spi.c  real_spi.c  snes_spi.c  wired_bare.c  wired_bare.h  wired_common.c  wired_common.h  wired_rtos.c  xbox_usb.c  xbox_usb.h
